--- a/Portfolio.css
+++ b/Portfolio.css
@@ -194,7 +194,7 @@ h4{
     background-color:white ;
 }
 .page-3{
-    height: 180%;
+    height: 190%;
     width: 100%;
     position: relative;
     top: -10%;
@@ -301,7 +301,7 @@ h4{
 }
 .page-4 h2{
     font-size: 120px;
-    margin: 30px 0px 50px 0px;
+    margin: 50px 0px 50px 0px;
 }
 .page-4 p{
     margin: 20px 300px;
@@ -310,12 +310,6 @@ h4{
     margin-top: 100px;
     line-height: 100px;
 }
-/* .page-4 #git{
-    font-size: 30px;
-    border: 1px solid black;
-    padding: 10px;
-    border-radius: 50%;
-} */
 .social{
     margin: 50px;
     display: flex;
@@ -342,6 +336,9 @@ h4{
     padding: 100px;
     color: white;
 }
+.page-5 h6{
+    margin: 10px;
+}
 h2{
     font-size: 70px;
     line-height: 70px;
@@ -365,7 +362,7 @@ h2{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin: 100px;
+    margin: 80px;
 }
 .connect-1{
     display: flex;
@@ -462,11 +459,14 @@ h3{
         font-size: 30px;
     }
     .hero div{
-        height: 600px;
+        height: 700px;
     }
     .page-2{
         width: 250%;
-        height: 170%;
+        height: 180%;
+    }
+    .page-2 p{
+        font-size: 20px;
     }
     .page-2 h1{
         font-size: 7rem;
@@ -480,11 +480,15 @@ h3{
     }
     .page-3{
         width: 250%;
-        height: 250%;
+        height: 350%;
         margin: 30% 0% 0% 0%;
+    }
+    .page-3 p{
+        font-size: 20px;
     }
     .page-4{
         width: 250%;
+        height: 120%;
         top: -18%;
     }
     .page-4 h6{
@@ -493,31 +497,32 @@ h3{
     }
     .page-4 p{
         width: 100%;
+        font-size: 20px;
         margin: 20px 0px;
     }
     .page-5{
         width: 250%;
-        height: 100%;
+        height: 140%;
     }
     .page-5 p{
         font-size: 23px;
     }
     .page-6{
         width: 250%;
-        height: 100%;
+        height: 120%;
     }
     .page-6 a{
         font-size: 20px;
     }
     .connect{
-        margin: 200px 20px;
+        margin: 90px 20px;
     }
     footer{
         width: 250%;
     }
 }
 
-@media only screen and (min-width: 768px) and (max-width: 1200px){
+@media only screen and (min-width: 768px) and (max-width: 1280px){
     .landingPage h1{
         font-size: 20vw;
     }
@@ -575,7 +580,7 @@ h3{
     }
     .page-3{
         width: 250%;
-        height: 140%;
+        height: 160%;
         top: 10%;
         margin: 30% 0% 0% 0%;
     }
@@ -602,7 +607,7 @@ h3{
     }
     .page-6{
         width: 250%;
-        height: 80%;
+        height: 120%;
     }
     .page-6 h6{
         font-size: 70px;
